--- a/index.html
+++ b/index.html
@@ -29,13 +29,10 @@
             }
             try{
                 fetch('https:/\/us-central1-website-382116.cloudfunctions.net/image_test', {
-                    body: JSON.stringify({'return': `${x},${y}`}),
+                    body: JSON.stringify({'content': `${x},${y}`}),
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json',
-                        'Access-Control-Allow-Origin': '*',
-                        'Access-Control-Allow-Methods': '*',
-                        'Access-Control-Allow-Headers': '*'
+                        'Content-Type': 'application/json'
                     },
                     mode: 'cors',
                         }).then(result => {
